Fixed footer links and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1143,19 +1143,21 @@ p.no-bottom-margin {
 .page-research .icon-menu-close {
   background: #ff5d5d; }
 
+.site-menu a.special-link,
 .page-research a.special-link {
   display: inline;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.87);
-  -webkit-box-shadow: 0px -3px 0px 0px #00F2FF inset;
-          box-shadow: 0px -3px 0px 0px #00F2FF inset;
+  -webkit-box-shadow: 0px -3px 0px 0px #ff5d5d inset;
+          box-shadow: 0px -3px 0px 0px #ff5d5d inset;
   -webkit-transition: -webkit-box-shadow 150ms ease-in-out;
   transition: -webkit-box-shadow 150ms ease-in-out;
   transition: box-shadow 150ms ease-in-out;
   transition: box-shadow 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out; }
+  .site-menu a.special-link:hover,
   .page-research a.special-link:hover {
-    -webkit-box-shadow: 0px -16px 0px 0px #00F2FF inset;
-            box-shadow: 0px -16px 0px 0px #00F2FF inset; }
+    -webkit-box-shadow: 0px -16px 0px 0px #ff5d5d inset;
+            box-shadow: 0px -16px 0px 0px #ff5d5d inset; }
 
 .page-research .site-menu a.special-link {
   -webkit-box-shadow: 0px -3px 0px 0px #ff5d5d inset;
@@ -1207,19 +1209,21 @@ p.no-bottom-margin {
 .page-more .icon-menu-close {
   background: #ff0089; }
 
+.site-menu a.special-link,
 .page-more a.special-link {
   display: inline;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.87);
-  -webkit-box-shadow: 0px -3px 0px 0px #00F2FF inset;
-          box-shadow: 0px -3px 0px 0px #00F2FF inset;
+  -webkit-box-shadow: 0px -3px 0px 0px #ff0089 inset;
+          box-shadow: 0px -3px 0px 0px #ff0089 inset;
   -webkit-transition: -webkit-box-shadow 150ms ease-in-out;
   transition: -webkit-box-shadow 150ms ease-in-out;
   transition: box-shadow 150ms ease-in-out;
   transition: box-shadow 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out; }
+  .site-menu a.special-link:hover,
   .page-more a.special-link:hover {
-    -webkit-box-shadow: 0px -16px 0px 0px #00F2FF inset;
-            box-shadow: 0px -16px 0px 0px #00F2FF inset; }
+    -webkit-box-shadow: 0px -16px 0px 0px #ff0089 inset;
+            box-shadow: 0px -16px 0px 0px #ff0089 inset; }
 
 .page-more .site-menu a.special-link {
   -webkit-box-shadow: 0px -3px 0px 0px #ff0089 inset;
